docs/7.57/md/abenstring_function_escape_abexa.md
---
title: "Source Code"
description: |
  REPORT  demo_escape_html. CLASS demo DEFINITION. PUBLIC SECTION. CLASS-METHODS main. ENDCLASS. CLASS demo IMPLEMENTATION. METHOD main. DATA: body     TYPE string, esc_body TYPE string. body = `<table border> ` && `<tr><td>11</td><td>12</td></tr> ` && `<tr><td>21</td><td>22</td></tr> ` && `
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_function_escape_abexa.htm"
abapFile: "abenstring_function_escape_abexa.htm"
keywords: ["select", "do", "if", "method", "class", "data", "abenstring", "function", "escape", "abexa"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_string.htm) →  [Expressions and Functions for String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_expr_func.htm) →  [String Functions (string\_func)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions.htm) →  [string\_func - Examples](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_functions_abexas.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: string_func - escape for HTML, ABENSTRING_FUNCTION_ESCAPE_ABEXA, 757%0D%0A%0D%0AError
:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

string\_func - escape for HTML

This example demonstrates the string function [escape](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenescape_functions.htm) for HTML.

Source Code   

REPORT  demo\_escape\_html.
CLASS demo DEFINITION.
  PUBLIC SECTION.
    CLASS-METHODS main.
ENDCLASS.
CLASS demo IMPLEMENTATION.
  METHOD main.
    DATA: body     TYPE string,
          esc\_body TYPE string.
    body = \`<table border> \`
        && \`<tr><td>11</td><td>12</td></tr> \`
        && \`<tr><td>21</td><td>22</td></tr> \`
        && \`</table>\`.
    esc\_body = escape( val    = body
                       format = cl\_abap\_format=>e\_html\_text ).
    cl\_demo\_output=>new(
      )->begin\_section( 'Original text'
      )->write\_text( body
      )->next\_section( 'Original text formatted as HTML'
      )->write\_html( body
      )->next\_section( 'Escaped text'
      )->write\_text( esc\_body
      )->next\_section( 'Escaped text formatted as HTML'
      )->write\_html( esc\_body
      )->display( ).  ENDMETHOD.
ENDCLASS.
START-OF-SELECTION.
  demo=>main( ).

Description   

The program applies the function escape to a string used as the body of an HTML file. The string is displayed as a text and as an HTML file both before and after the function is executed.